<resources>
    <string name="app_name">Unit Converter</string>
    <string name="area">Area</string>
    <string name="speed">Speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="temperature">Temperature</string>
    <string name="mass">Mass</string>
    <string name="length">Length</string>
    <string name="degree">Degree</string>
    <string name="to">To</string>
    <string name="convert_from">Convert from</string>
    <string name="calculate">Calculate</string>
    <string name="kelvin">Kelvin</string>
    <string name="enter_value_to_convert">Enter value to convert</string>
    <string name="celsius">Celsius</string>
    <string name="foot_second">Foot/second</string>
    <string name="meter_second">Meter/second</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="gram">Gram</string>
    <string name="milligram">Milligram</string>
    <string name="centimeter">Centimeter</string>
    <string name="millimetre">Millimetre</string>


    <string-array name="temperature_units">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="speed_units">
        <item>Foot/second</item>
        <item>Meter/second</item>
        <item>Kilometer/hour</item>
        <item>Mile/hour</item>
        <item>Knot</item>
    </string-array>

    <string-array name="time_units">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>

    <string-array name="mass_units">
        <item>Milligram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Pound</item>
    </string-array>

    <string-array name="length_units">
        <item>Millimetre</item>
        <item>Centimeter</item>
        <item>Inch</item>
        <item>Meter</item>
        <item>Kilometer</item>
    </string-array>

</resources>